<resources>
    <string name="app_name">سوق المباركية</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>
    <string name="order_details">Order Details</string>
    <string name="empty_ribots">There aren\'t any ribots</string>
    <string name="error_loading_ribots">There was a problem loading the ribots</string>
    <string name="default_notification_channel_id">1</string>
    <string name="no_connection">No internet connect please ty again later</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="forget_password"> Forgot your password? </string>
    <string name="username"> Username </string>
    <string name="sign_uplabel"> Create account </string>
    <string name="visitor"> Guest Login </string>
    <string name="user_data_label"> Enter email / mobile number </string>
    <string name="password"> Enter password </string>
    <string name="requirements"> Please enter the following data to create a new account </string>
    <string name="email_label"> Enter email </string>
    <string name="user_name_label"> Enter your name </string>
    <string name="phone_numberlabel"> Enter mobile number </string>
    <string name="sure_label"> Confirm </string>
    <string name="hello_label"> Welcome </string>
    <string name="data_entry_label"> Please enter data to continue </string>
    <string name="followup_label"> Continue </string>
    <string name="visitor_label"> Dear Guest </string>
    <string name="choosecountry_label"> Choose the appropriate country </string>
    <string name="country_label"> Saudi Arabia </string>
    <string name="dialog_label"> Product Evaluation </string>
    <string name="evaluation_desc_label"> We thank you for your trust. Please let us know what you think to offer you the best service </string>
    <string name="send_label">send</string>
    <string name="cancel_label">Cancel</string>
    <string name="desc">About</string>
    <string name="done_label">Done Successfully</string>
    <string name="feedback_label">Thank you for your confidence in us You can follow the order through my orders screen</string>
    <string name="closeaction_label">Close</string>
    <string name="languageenglish_label">choose the language</string>
    <string name="arlanguage_label">العربية</string>
    <string name="enlanguage_label">English</string>
    <string name="choose_country_label">Choose country</string>
    <string name="countrychoose_desc">Please select the country to display the products</string>
    <string name="currency_label">د.ك</string>
    <string name="filter_results">Filter Result</string>
    <string name="list_label">Menu</string>
    <string name="net_textView">Grid</string>
    <string name="filter_label">Filter</string>
    <string name="filtercolors_label">Filter by price</string>
    <string name="mini">From</string>
    <string name="max">To</string>
    <string name="filtersize_label">Filter by size</string>
    <string name="size_type">S</string>
    <string name="filterprice_label">Filter by color</string>
    <string name="aboutus_label">سوق المباركية</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_home">Home</string>
    <string name="title_fav">Favourite</string>
    <string name="title_myorders">My orders</string>
    <string name="title_specialorder">Spacial order</string>
    <string name="title_settigs">More</string>
    <string name="status">Status</string>
    <string name="products_total_label">Products count</string>
    <string name="availableasize_type">X</string>
    <string name="amount_label">Total amount</string>
    <string name="contiue_buying_label">Continue Purchase</string>
    <string name="product_details_label">Product details</string>
    <string name="add_product_label">Add to cart</string>
    <string name="_maxordernumber_label">Maximum order quantity</string>
    <string name="contiue_shopping_label">Continue shopping</string>
    <string name="notifications_label">Notifications</string>
    <string name="cart_label">Shopping cart</string>
    <string name="myaccount_label">My account</string>
    <string name="about_label">About app</string>
    <string name="rules_label"> Terms and Conditions </string>
    <string name="plolicy_label"> Usage Policy </string>
    <string name="policyrecovery_label"> Return Policy </string>
    <string name="under_Review"> Under revision </string>
    <string name="payments_label"> Selected payment method </string>
    <string name="service_label"> Services </string>
    <string name="deliverycost_label"> Delivery Cost </string>
    <string name="discountcode_label"> Discount coupon code </string>
    <string name="ordererstotal_label"> Total orders </string>
    <string name="discountvalue_label"> Discount value </string>
    <string name="paymentamount_label"> Total amount to pay </string>
    <string name="_note_label"> The total amount is inclusive VAT</string>
    <string name="user_details"> User Name </string>
    <string name="evaluate_label"> Evaluate </string>
    <string name="confirm"> Confirm payment </string>
    <string name="bill_details"> Invoice Details </string>
    <string name="empty_label">Email is required</string>
    <string name="name_erro">Name is required</string>
    <string name="phone_empty_label">Phone number is required</string>
    <string name="passwordempty_label">Password is required</string>
    <string name="confirmpassword_label"> Password not matched</string>
    <string name="emailadress_label"> Email </string>
    <string name="phone_label"> Mobile number </string>
    <string name="message_label"> Enter your message text here </string>
    <string name="topic_label"> Subject </string>
    <string name="change_dialoglabel"> Change password </string>
    <string name="passwordcurrent_label"> Current password </string>
    <string name="passwordnewlabel"> New password </string>
    <string name="passwordconfirmlabel"> Confirm new password </string>
    <string name="passwordconfirm_action"> Confirm </string>
    <string name="productname_label"> Product title </string>
    <string name="productdetails_label"> Details </string>
    <string name="sendorderlabel"> Send Order </string>
    <string name="newaddress_label"> New Address </string>
    <string name="passwordword_label"> Password </string>
    <string name="contact_direct_label"> Direct connection </string>
    <string name="welcome_headr_label"> We are happy to receive your comments and suggestions </string>
    <string name="name_label"> Name </string>
    <string name="confirm_label"> Confirm payment </string>
    <string name="welcome_label"> Welcome to us </string>
    <string name="mohafza_label"> Governorate </string>
    <string name="manteqa_label"> Area </string>
    <string name="peicenum_label"> Block No. </string>
    <string name="streetnum_label"> Street No. </string>
    <string name="jadnum_label"> Avenue No. </string>
    <string name="building_label"> Building </string>
    <string name="home_label"> House </string>
    <string name="buildingnumer_label"> Building No. </string>
    <string name="floornumber_label"> Floor No. </string>
    <string name="flatnumber_label"> apartment No. </string>
    <string name="aladdress_label"> Address </string>
    <string name="paymentmethod_label"> The appropriate payment method for you </string>
    <string name="cobondiscount_label"> Enter the discount coupon if you have one </string>
    <string name="code_label"> Discount code </string>
    <string name="privacy_label"> Privacy policy </string>
    <string name="login_label"> login </string>
    <string name="sendmessage_label"> Send message </string>
    <string name="contatabus_label"> Contact us </string>
    <string name="productdeatails_label"> Product details </string>
    <string name="search_label"> What are you looking for? </string>
    <string name="searchdefine_label"> You can search for a specific label or product </string>
    <string name="categories_label"> Categories </string>
    <string name="show_label"> View all </string>
    <string name="arrived_label"> Recently arrived </string>
    <string name="mosteorder_label"> Most popular </string>
    <string name="share">Share</string>
    <string name="empty_fav">You have no favorite</string>
    <string name="empty_fav_label2"> To add products to your Favorites list go to the product list, select the desired product and click the Add to Favorites icon </string>
    <string name="signin_confrimation">You need to login</string>
    <string name="no_orders">You have no orders</string>
    <string name="add_to_cart_now">Add to Cart Now</string>
    <string name="exceed_amount_left">Quantity has been consumed</string>
    <string name="emptyphone_label">Phone number is required</string>
    <string name="emptytopic_label">Field is required</string>
    <string name="callus_label">Contact us</string>
    <string name="save">Save</string>
    <string name="total_cost">Total amount</string>
    <string name="empty_bag_3_label">for more options</string>
    <string name="empty_bag_2_label">To add products to your cart Go to the product list, select the product then click "Add" button</string>
    <string name="empty_bag_1_label">Your cart is empty</string>
    <string name="go_shopping_label">Go Shopping</string>
    <string name="start_shopping_label">Start shopping now</string>
    <string name="product_erro">Product Name is required</string>
    <string name="productde_erro">Product details is required</string>
    <string name="no_result_found">No result found</string>
    <string name="building_input"> Enter building No. </string>
    <string name="floor_input"> Enter the floor No. </string>
    <string name="flat_input"> Enter apartment No. </string>
    <string name="save_address"> Save address to address list </string>
    <string name="house_input"> Enter home No. </string>
    <string name="housenumer_label"> House No. </string>
    <string name="verify">Verify</string>
    <string name="cash">Cash</string>
    <string name="knet">Knet</string>
    <string name="payment_activity">Payment</string>
    <string name="confirm_payment_activity">Payment Confirmation</string>
    <string name="gov">Gov</string>
    <string name="block_input">Enter block No.</string>
    <string name="neigh">Neighborhood</string>
    <string name="neigh_input">Enter the neighborhood</string>
    <string name="logout">Logout</string>
    <string name="empty_filter_result">No result found</string>
    <string name="forget_password_label">Please enter your email address or mobile to recover your password</string>
    <string name="username_or_mobile_label">Email or phone number</string>
    <string name="sendlabel">Send</string>
    <string name="countryandlanguage_label">Country &amp; Language </string>
    <string name="title_activity_guest">Guest Login</string>
    <string name="change_country">Change Country</string>
    <string name="change_country_confirmation">When you change the country of display, only the selected country products will be displayed in the shopping cart.</string>
</resources>