<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:material="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rect_lightgrey"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layoutDirection="locale"
    android:orientation="vertical"
    android:textDirection="locale">

    <requestFocus material:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/forget_password_label"
        android:textColor="@color/colorprimary"
        android:fontFamily="@font/din_next_arabic_regular"
        android:textSize="@dimen/_13ssp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




    <android.support.design.widget.TextInputEditText
        android:id="@+id/email_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:hint="@string/username_or_mobile_label"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        android:paddingStart="@dimen/_12sdp"
        android:paddingTop="@dimen/_16sdp"
        android:paddingBottom="@dimen/_16sdp"
        android:textColor="@color/colorprimary"
        android:textSize="14sp"
        android:background="@drawable/textview_stroke"
        android:fontFamily="@font/din_next_arabic_regular"
        app:layout_constraintStart_toStartOf="@id/txt"
        app:layout_constraintEnd_toEndOf="@id/txt"
        app:layout_constraintBottom_toTopOf="@id/send_label"
        app:layout_constraintTop_toBottomOf="@id/txt" />


    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#707070"
        app:layout_constraintEnd_toEndOf="@id/email_editText"
        app:layout_constraintStart_toStartOf="@id/email_editText"
        app:layout_constraintTop_toTopOf="@id/email_editText" />

    <TextView
        android:id="@+id/user_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:background="@color/LightGray"
        android:fontFamily="@font/din_next_arabic_bold"
        android:paddingStart="@dimen/_6sdp"
        android:paddingTop="@dimen/_3sdp"
        android:paddingEnd="@dimen/_6sdp"
        android:paddingBottom="@dimen/_6sdp"
        android:text="@string/user_details"
        android:textColor="@color/colorprimary"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="@id/line"
        app:layout_constraintStart_toStartOf="@id/line"
        app:layout_constraintTop_toTopOf="@id/line" />
    <TextView
        android:id="@+id/send_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17sdp"
        android:fontFamily="@font/din_next_arabic_bold"
        android:padding="@dimen/_15sdp"
        android:text="@string/send_label"
        android:textColor="@color/colorprimary"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toStartOf="@id/cancel_textView"
        app:layout_constraintTop_toBottomOf="@id/email_editText"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/cancel_textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/din_next_arabic_bold"
        android:padding="@dimen/_15sdp"
        android:text="@string/cancel_label"
        android:textColor="@color/colorprimary"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="@id/send_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_editText"
        app:layout_constraintTop_toTopOf="@id/send_label" />

</android.support.constraint.ConstraintLayout>