<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:material="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:layoutDirection="locale"
    android:orientation="vertical"
    android:textDirection="locale"
    tools:context=".ui.auoth.GuestScreenActivity">

    <requestFocus material:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@id/welcome_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoeui"
        android:gravity="center"
        android:text="@string/hello_label"
        android:textColor="@color/colorprimary"
        android:textSize="@dimen/_23ssp"
        app:layout_constraintBottom_toTopOf="@id/visitor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/visitor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoeui"
        android:gravity="center"
        android:text="@string/visitor_label"
        android:textColor="@color/colorprimary"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toTopOf="@id/data_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_textView"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/data_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoeui"
        android:text="@string/data_entry_label"
        android:textColor="@color/colorprimary"
        android:textSize="@dimen/_13ssp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@id/username_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_textView" />


    <android.support.design.widget.TextInputEditText
        android:id="@+id/username_EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:background="@drawable/textview_stroke"
        android:fontFamily="@font/segoeui"
        android:gravity="start"
        android:hint="@string/user_name_label"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_12sdp"
        android:paddingTop="@dimen/_16sdp"
        android:paddingBottom="@dimen/_16sdp"
        android:textAlignment="viewStart"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toTopOf="@+id/phone_number_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/data_label"
        app:layout_constraintVertical_chainStyle="packed" />

    <View
        android:id="@+id/line4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#707070"
        app:layout_constraintEnd_toEndOf="@id/username_EditText"
        app:layout_constraintStart_toStartOf="@id/username_EditText"
        app:layout_constraintTop_toTopOf="@id/username_EditText" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:background="@color/LightGray"
        android:fontFamily="@font/seguisb"
        android:paddingStart="@dimen/_6sdp"
        android:paddingTop="@dimen/_1sdp"
        android:paddingEnd="@dimen/_6sdp"
        android:paddingBottom="@dimen/_6sdp"
        android:text="@string/name_label"
        android:textAlignment="viewStart"
        android:textColor="@color/colorprimary"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="@id/line4"
        app:layout_constraintStart_toStartOf="@id/line4"
        app:layout_constraintTop_toTopOf="@id/line4" />


    <android.support.design.widget.TextInputEditText

        android:id="@+id/phone_number_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_stroke"
        android:drawablePadding="12dp"
        android:fontFamily="@font/segoeui"
        android:hint="@string/phone_numberlabel"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="@dimen/_12sdp"
        android:paddingTop="@dimen/_16sdp"
        android:paddingBottom="@dimen/_16sdp"
        android:textAlignment="viewStart"
        android:textSize="@dimen/_11ssp"
        app:errorEnabled="true"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/followup_bt"
        app:layout_constraintEnd_toEndOf="@id/username_EditText"
        app:layout_constraintStart_toStartOf="@id/username_EditText"
        app:layout_constraintTop_toBottomOf="@id/username_EditText"

        app:passwordToggleEnabled="true" />

    <View
        android:id="@+id/line5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#707070"
        app:layout_constraintEnd_toEndOf="@id/phone_number_editText"
        app:layout_constraintStart_toStartOf="@id/phone_number_editText"
        app:layout_constraintTop_toTopOf="@id/phone_number_editText" />

    <TextView
        android:id="@+id/phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:background="@color/LightGray"
        android:fontFamily="@font/seguisb"
        android:paddingStart="@dimen/_6sdp"
        android:paddingTop="@dimen/_1sdp"
        android:paddingEnd="@dimen/_6sdp"
        android:paddingBottom="@dimen/_6sdp"
        android:text="@string/phone_label"
        android:textAlignment="viewStart"
        android:textColor="@color/colorprimary"
        android:textSize="@dimen/_13ssp"

        app:layout_constraintBottom_toBottomOf="@id/line5"
        app:layout_constraintStart_toStartOf="@id/line5"
        app:layout_constraintTop_toTopOf="@id/line5" />

    <TextView
        android:id="@+id/phoneKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15sdp"
        android:drawableStart="@drawable/ic_select"
        android:drawablePadding="@dimen/_7sdp"
        android:paddingStart="@dimen/_18sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="+965"
        android:textColor="@color/colorprimary"
        app:layout_constraintBottom_toBottomOf="@id/phone_number_editText"
        app:layout_constraintEnd_toEndOf="@id/phone_number_editText"
        app:layout_constraintTop_toTopOf="@id/phone_number_editText" />

    <Button
        android:id="@+id/followup_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@color/colorprimary"
        android:fontFamily="@font/segoeui"
        android:padding="@dimen/_8sdp"
        android:text="@string/followup_label"
        android:textColor="@color/brown"
        android:textSize="@dimen/_17ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_editText" />


</android.support.constraint.ConstraintLayout>