<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:material="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layoutDirection="locale"
    android:orientation="vertical"
    android:textDirection="locale">

    <requestFocus material:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/ic_checked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/paymentdone_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/paymentdone_textView"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/done_label"
        android:fontFamily="@font/segoeuib"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/colorprimary"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/feedback_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cancel_action"
        app:layout_constraintTop_toBottomOf="@id/paymentdone_textView"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/feedback_label"
        android:paddingBottom="@dimen/_10sdp"
        android:textColor="@color/colorprimary"
        android:fontFamily="@font/segoeui"
        android:textSize="@dimen/_13ssp"
        android:textAlignment="viewStart"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/colorprimary"
        android:textSize="@dimen/_18sdp"
        android:fontFamily="@font/segoeui"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:padding="@dimen/_8sdp"
        android:text="@string/closeaction_label"
        android:id="@+id/cancel_action"
        app:layout_constraintTop_toBottomOf="@id/feedback_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />


</android.support.constraint.ConstraintLayout>